# Benlsey-Operating-System

./: .cursorrules  .editorconfig  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  2_MONTH_MVP_PLAN.md  AGENTS.md  AI_LEARNING_SYSTEM.md  BENSLEY_BRAIN_MASTER_PLAN.md  CLAUDE.md  CONTRIBUTING.md  CORRECTIVE_SQL_SCRIPT.sql  Caddyfile  DATABASE_MIGRATION_SUMMARY.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_STATUS.md  INVOICE_REVIEW_INSTRUCTIONS.md  LICENSE  Makefile  QUICKSTART_ROADMAP.md  README.md  SESSION_SUMMARY_CONTRACT_INVOICE_FIXES.md  SYSTEM_STATUS.md  TODO.md  WHAT_DID_WE_BUILD.md  ai_change_detector.py  ai_database_auditor.py  ai_email_processor.py  bensley_brain.py  categorize_projects.py  docker-compose.yml  document_query.py  fix_email_dates.py  gemini_comment.md  import_contract_data.py  import_contract_fee_breakdown.py  import_excel_timeline.py  import_proposals.py  (+22 more)
.ai-coordination/: CODEX_MCP_SETUP.md  MCP_STATUS.md
.claude/: AGENT_TASKS.md  AUDIT_REPORT.md  AUDIT_VS_FEEDBACK.md  BACKLOG.md  CODEBASE_INDEX.md  CONTINUATION_PROMPT.md  HANDOFF.md  HOW_IT_WORKS.md  STATE.md  STATUS.md  STRATEGIC_AUDIT_2026.md  USER_FEEDBACK_AUDIT_REPORT.md
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.mcp/: config.json
AUDITS/: 2025-01-15-codex-audits-backend.md  2025-01-15-codex-full-system-audit.md
backend/: ROLE_BASED_STATS_IMPLEMENTATION.md  railway.json  requirements.txt  test_dashboard_calculations.py  test_dashboard_stats.py
data/: README.md
database/: AUDIT_GUIDE.md  FIX_DATABASE_MESS.sql  (+15 more)
(+1249 files in other folders)
