[project]
name = "bensley-operations-platform"
version = "1.0.0"
description = "Bensley Design Studio Operations Platform"
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | venv
    | __pycache__
    | node_modules
    | scripts/archive
    | \.archived
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"

exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "node_modules",
    "scripts/archive",
    ".archived",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by black)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
    "E722",   # bare except
]

[tool.ruff.lint.isort]
known-first-party = ["backend", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = [
    "scripts/archive",
    "venv",
    ".venv",
]
